--- a/front/html/product.html
+++ b/front/html/product.html
@@ -66,8 +66,10 @@
                   <label for="color-select">Choisir une couleur :</label>
                   <select name="color-select" id="colors">
                       <option value="">--SVP, choisissez une couleur --</option>
-<!--                       <option value="vert">vert</option>
-                      <option value="blanc">blanc</option> -->
+                        <!--
+                        <option value="vert">vert</option>
+                        <option value="blanc">blanc</option> 
+                        -->
                   </select>
                 </div>
 
